Fix spacing too big on mobile

--- a/congklak/play/style.css
+++ b/congklak/play/style.css
@@ -25,7 +25,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 2em;
+  padding: 2em 1em;
   border-radius: 10em;
   background: #c4c4c4;
 }
@@ -40,6 +40,23 @@ aside {
 aside h2 {
   writing-mode: vertical-lr;
   display: flex;
+}
+
+.play-area {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5em 0;
+}
+.play-area .side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.play-area .side:first-child {
+  margin-right: 0.5em;
+}
+.play-area .side .ring:not(:first-child) {
+  margin-top: 0.5em;
 }
 
 .ring {
@@ -58,23 +75,6 @@ aside h2 {
 .ring.home {
   width: 6em;
   height: 6em;
-}
-
-.play-area {
-  display: flex;
-  flex-direction: row;
-  padding: 1em 0;
-}
-.play-area .side {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.play-area .side:first-child {
-  margin-right: 1.5em;
-}
-.play-area .side .ring:not(:first-child) {
-  margin-top: 1em;
 }
 
 @media only screen and (min-width: 768px) {
